--- a/style.css
+++ b/style.css
@@ -18,6 +18,24 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+}
+
+.container {
+  border: 1px solid red;
+  margin: 0 auto;
+  width: 1140px;
+  height: 100%;
+}
+
+.header-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
+
 .btn {
   border: 2px solid #fff;
   border-radius: 5px;
@@ -42,6 +60,14 @@ h1 {
   text-transform: uppercase;
   color: #2f2e41;
   margin-bottom: 70px;
+  text-align: center;
+}
+
+.cards-wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-bottom: 80px;
 }
 
 .card {
@@ -65,6 +91,10 @@ h1 {
 
 .card-img {
   margin-bottom: 36px;
+  margin-left: auto;
+  margin-right: auto;
+  display: inline-block;
+  align-items: center;
 }
 
 .card-text {
@@ -79,6 +109,18 @@ h1 {
   font-weight: 700;
 }
 
+.footer-links {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 100px;
+  height: 100%;
+}
+
+.footer-links li {
+  padding: 8px 15px;
+}
+
 footer a {
   font-weight: 400;
   font-size: 16px;
@@ -86,4 +128,7 @@ footer a {
   letter-spacing: -0.02em;
   text-transform: capitalize;
   color: #fff;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
