--- a/style.css
+++ b/style.css
@@ -23,10 +23,12 @@ ul {
 }
 
 .container {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   margin: 0 auto;
-  width: 1140px;
+  max-width: 1170px;
+  width: 100%;
   height: 100%;
+  padding: 0 15px;
 }
 
 .header-wrapper {
@@ -67,16 +69,21 @@ h1 {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-bottom: 80px;
+  /* margin-bottom: 80px; */
+  gap: 15px;
 }
 
 .card {
   border: 2px solid #e7e7e7;
   border-radius: 5px;
-  width: 370px;
+  width: 330px;
   height: 552px;
   background: #fff;
   padding: 46px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-grow: 1;
 }
 
 .card-title {
