--- a/style.css
+++ b/style.css
@@ -94,6 +94,11 @@ h1 {
   text-align: center;
   color: #2f2e41;
   margin-bottom: 40px;
+  max-width: 180px;
+}
+
+.card-title.small {
+  min-width: 180px;
 }
 
 .card-img {
@@ -138,4 +143,19 @@ footer a {
   display: flex;
   align-items: center;
   gap: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .main-section {
+    padding: 46px 0 50px;
+  }
+
+  .card-title.small {
+    max-width: max-content;
+  }
+
+  h1 {
+    font-size: 36px;
+    margin-bottom: 46px;
+  }
 }
