--- a/style.css
+++ b/style.css
@@ -93,11 +93,11 @@ h1 {
   text-align: center;
   color: #2f2e41;
   margin-bottom: 40px;
-  max-width: 180px;
+  /* max-width: 180px; */
 }
 
 .card-title.small {
-  min-width: 180px;
+  max-width: 180px;
 }
 
 .card-img {
@@ -175,5 +175,21 @@ footer a {
   h1 {
     font-size: 28px;
     margin-bottom: 36px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  h1 {
+    font-size: 22px;
+    margin-bottom: 28px;
+  }
+  .footer-links {
+    flex-direction: column;
+  }
+  .card-title.small {
+    max-width: 100%;
+  }
+  .card-text {
+    font-size: 14px;
   }
 }
